--- a/package.json
+++ b/package.json
@@ -1,22 +1,30 @@
 {
   "name": "react-bpg",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "",
-  "main": "./src/react-bpg.js",
+  "main": "index.js",
   "scripts": {
+    "build": "babel src/react-bpg.js -o index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/xuezhma/react-bpg.git"
   },
-  "author": "",
+  "author": "Xuezheng ma",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/xuezhma/react-bpg/issues"
   },
   "homepage": "https://github.com/xuezhma/react-bpg#readme",
-  "dependencies": {
-    "react": "^15.4.2"
+  "peerDependencies": {
+    "react": ">=0.14"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.23.0",
+    "babel-preset-babili": "0.0.12",
+    "babel-preset-env": "^1.2.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.23.0"
   }
 }
