--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "babel-preset-babili": "0.0.12",
     "babel-preset-env": "^1.2.0",
     "babel-preset-es2015": "^6.22.0",
-    "babel-preset-react": "^6.23.0"
+    "babel-preset-react": "^6.23.0",
+    "np": "^2.13.2"
   },
   "dependencies": {
     "bpg-decoder": "0.0.7"
